[metadata]
name = audpsychometric
author = Christian Geng, Sandrine Lefort, Hagen Wierstorf
author-email = cgeng@audeering.com, slefort@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/audpsychometric
project-urls =
    Documentation = https://audeering.github.io/audpsychometric/
description = A Python example package
long-description = file: README.rst, CHANGELOG.rst
license = MIT
license-file = LICENSE
keywords = example
platforms= any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer >=1.10.0
    audmetric
    pingouin
    numpy
    pandas
    scikit-learn
    statsmodels
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --doctest-plus
    --cov=audpsychometric
    --cov-fail-under=100
    --cov-report xml
    --cov-report term-missing
    --ignore=test_audeering_internal.py
    -k "not internal"
xfail_strict = true
markers =
    internal: tests that can only run audeering-internally.

[flake8]
max-line-length = 119
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
per-file-ignores =
       build/jupyter_execute/api.py:W391


[yapf]
# or put into .style.yapf .style.yapf
based_on_style = pep8
spaces_before_comment = 4
split_before_logical_operator = true
column_limit = 119
align_closing_bracket_with_visual_indent = True
split_before_arithmetic_operator = True
split_before_bitwise_operator = True
blank_line_before_module_docstring = True
split_before_dot = True
newline_after_paren = True

[isort]
force_single_line=True
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=119
known_first_party=aud*
force_alphabetical_sort_within_sections=True
# isort docs at https://pycqa.github.io/isort/index.html
